--- a/index.html
+++ b/index.html
@@ -7,18 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BikCraft - Bicicletas Elétricas</title>
   <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/css/style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Poppins:wght@400;600&family=Righteous&family=Roboto:wght@400;500&family=Sarala&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
       <a href="./">
         <img src="/img/bikcraft.svg" alt="BikCraft">
       </a>
 
       <nav aria-label="Primaria">
-        <ul class="header-menu">
+        <ul class="header-menu font-1-m">
           <li><a href="./bicicletas.html">Bicicletas</a></li>
           <li><a href="./seguros.html">Seguros</a></li>
           <li><a href="./contato.html">Contato</a></li>
@@ -26,6 +30,46 @@
       </nav>
     </div>
   </header>
+
+  <main class="introducao-bg">
+    <div class="introducao container">
+      <div class="introducao-conteudo">
+        <h1 class="font-1-xxl">Bicicletas Feitas sob Medida<span class="cor-p1">.</span></h1>
+        <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a class="botao" href="./bicicletas.html">Escolha a sua</a>
+      </div>
+
+      <img src="/img/fotos/introducao.jpg" alt="Bicicleta Elétrica Preta">
+    </div>
+  </main>
+
+  <article class="bicicletas-lista">
+    <h2 class="font-1-xxl container">escolha a sua<span class="cor-p1">.</span></h2>
+    <ul>
+      <li>
+        <a href="./bicicletas/magic.html">
+          <img src="/img/bicicletas/magic-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl cor-11">Magic Might</h3>
+          <span class="font-2-m cor-8">R$ 2499</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicicletas/magic.html">
+          <img src="/img/bicicletas/nimbus-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl cor-11">Nimbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
+        </a>
+      </li>
+      <li>
+        <a href="./bicicletas/magic.html">
+          <img src="/img/bicicletas/nebula-home.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl cor-11">Nebula Cosmic</h3>
+          <span class="font-2-m cor-8">R$ 3999</span>
+        </a>
+      </li>
+    </ul>
+  </article>
+
 </body>
 
 </html>
